--- a/src/App.scss
+++ b/src/App.scss
@@ -87,16 +87,15 @@ a {
   }
 
   &__btn {
-    color: #FEFCF7;
-    background-color: #2C343E;
+    width: 100px;
+    background-color: #000000;
+    color: #fff;
+    padding: 10px 10px;
+    margin-top: 20px;
+    margin-left: 20px;
     border: none;
-    padding: 10px 25px;
-    border-radius: 10px;
-    margin: 10px 10px;
-    font-family: 'Barlow';
-    font-size: 16px;
-    font-weight: 400;
-    line-height: 26px;
+    border-radius: 6px;
+    border: 1px solid #fff;
     cursor: pointer;
   }
 }
